--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ h3{
 #fan img{
     width: 20%;
     border-radius: 50%;
+    margin-top: 2%;
 }
 
 #div{
@@ -158,5 +159,30 @@ h3{
     margin-left: 22%;
     background-color: #d9d0c9;
     border: none;
-    margin-top: -5%;
+}
+
+#link{
+    margin-top: -4%;
+}
+
+button:hover{
+    background-color: rgba(161, 199, 204, 0.425);
+    font-size: 16px;
+    cursor: pointer;
+}
+
+footer{
+    width: 100%;
+    height: 70px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 6%;
+    
+}
+
+footer h3{
+    color: white;
+    margin-top: 1%;
 }
